<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Transit</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="edit_text_search_hint">Sök resmål/startpunkt</string>
    <string name="edit_text_search_from">Sök från</string>
    <string name="search_journey_button_text">Sök</string>
    <string name="edit_text_search_to">Sök till</string>
    <string name="line_separator">lineSeparator</string>
    <string name="fav_btn">Spara sökning</string>
    <string name="fav_header">Favoriter</string>
    <string name="rec_header">Senaste sökningar</string>
    <string name="clear_searches">Rensa sökningar</string>
    <string name="clear_favourites">Rensa favoriter</string>
    <string name="label_arrival">Ankomst:</string>
    <string name="label_departure">Avgår:</string>
    <string name="load_earlier">Tidigare</string>
    <string name="load_later">Senare</string>
    <string name="passed">Passerat</string>
    <string name="disturbance_type">Välj typ av störning</string>
    <string name="report_note">Notering (valfri)</string>
    <string name="report_spinner_prompt">Välj störningstyp</string>
    <string name="disturbance_minutes">Approximerad försening (min)</string>
    <string name="report_from_station">Välj start station</string>
    <string name="report_to_station">Slut station</string>
    <string name="delay_reported">Försening rapporterad</string>
    <string name="choose_time">Välj tid</string>
    <string name="done">Klar</string>
    <string name="currentTime">Just nu</string>
    <string name="clear_disturbances">Töm rapporteringar</string>
    <string name="Util">Allmänt</string>
    <string name="report">Rapportering</string>
    <string name="pref_summary_dist">Ta emot rapporteringar från andra användare gällande förseningar, väglag med
        mera.
    </string>
    <string name="messages">Meddelanden</string>
    <string name="prefs_summary_allow_notifications">Tillåt appen att notifiera när en försening rapporterats.</string>
    <string name="settings">Inställningar</string>
    <string name="pref_key_accept_dist_report">accept_disturbance_reports</string>
    <string name="pref_key_accept_not">accept_notifications</string>
    <string name="help">Hjälp</string>

    <string-array name="drawer_labels">
        <item>Sök</item>
        <item>Rapportera</item>
        <item>Förseningar</item>
        <item>Inställningar</item>
    </string-array>

    <string-array name="disturbance_types">
        <item>Krock</item>
        <item>Kö</item>
        <item>Oväder</item>
        <item>Allmänt slött</item>
        <item>Dåligt väglag</item>
        <item>Annat…</item>
    </string-array>
</resources>
