<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
              android:textColor="@color/white"
              android:textSize="25sp"
              android:textAppearance="?android:attr/textAppearanceLarge" android:text="@string/disturbance_type"
              android:id="@+id/textView"
              android:padding="5dp"
              android:gravity="center" android:layout_alignParentTop="true" android:layout_centerHorizontal="true"/>
    <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:elevation="5dp"
            android:prompt="@string/report_spinner_prompt"
            android:id="@+id/spinner" android:layout_gravity="center_horizontal" android:spinnerMode="dropdown"
            android:layout_below="@+id/textView"/>

    <TextView android:layout_width="fill_parent" android:layout_height="wrap_content"
              android:id="@+id/report_from_station"
              android:textColorHint="@color/colorPrimary"
              android:textColor="@color/colorPrimary"
              android:gravity="center"
              android:background="@drawable/abc_edit_text_material"
              android:hint="@string/report_from_station" android:paddingTop="5dp" android:textSize="22sp"
              android:layout_below="@+id/minutePicker" android:layout_alignParentLeft="true"
              android:layout_alignParentStart="true"/>

    <TextView android:layout_width="fill_parent" android:layout_height="wrap_content"
              android:id="@+id/report_to_station"
              android:textColorHint="@color/colorPrimary"
              android:textColor="@color/colorPrimary"
              android:gravity="center"

              android:background="@drawable/abc_edit_text_material"
              android:hint="@string/report_to_station" android:paddingTop="5dp" android:textSize="22sp"

              android:layout_below="@+id/report_from_station" android:layout_alignParentLeft="true"
              android:layout_alignParentStart="true"/>

    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:inputType="textMultiLine"
            android:hint="@string/report_note"
            android:gravity="center"

            android:textColorHint="@color/text_hint_gray"
            android:textColor="@color/resultListTextColor"
            android:textColorHighlight="@color/resultListTextColor"
            android:textColorLink="@color/resultListTextColor"
            android:ems="10"
            android:id="@+id/disturbance_note"
            android:layout_below="@+id/report_to_station" android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"/>


    <at.markushi.ui.CircleButton
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:id="@+id/gcmButton"
            android:src="@drawable/ic_plus"
            app:cb_color="#99CC00"
            app:cb_pressedRingWidth="8dip" android:layout_gravity="right"
            android:layout_alignParentBottom="true" android:layout_centerHorizontal="true"/>
    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
              android:textColor="@color/white"
              android:textSize="25sp"
              android:textAppearance="?android:attr/textAppearanceLarge" android:text="@string/disturbance_minutes"
              android:id="@+id/textView2"
              android:padding="5dp" android:layout_below="@+id/spinner" android:layout_centerHorizontal="true"/>
    <NumberPicker
            android:id="@+id/minutePicker"
            android:layout_width="wrap_content"

            android:layout_height="wrap_content"
            android:layout_below="@+id/textView2" android:layout_centerHorizontal="true"/>
</RelativeLayout>